--- a/Abb/nbproject/private/private.properties
+++ b/Abb/nbproject/private/private.properties
@@ -4,4 +4,4 @@ do.depend=false
 do.jar=true
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\msanhuezal\\AppData\\Roaming\\NetBeans\\7.3.1\\build.properties
+user.properties.file=C:\\Users\\Sebastian\\AppData\\Roaming\\NetBeans\\8.0.1\\build.properties
